started work on XCrypto state section

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -1,6 +1,6 @@
 % =============================================================================
 
-\begin{table}[p]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
@@ -27,7 +27,7 @@ Class                 & Syntax                     & Section                    
 
 % -----------------------------------------------------------------------------
 
-\begin{table}[p]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
@@ -45,7 +45,7 @@ Class                 & Syntax                     & Section                    
 
 % -----------------------------------------------------------------------------
 
-\begin{table}[p]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
@@ -64,7 +64,7 @@ Class                 & Syntax                     & Section                    
 
 % -----------------------------------------------------------------------------
 
-\begin{table}[p]
+\begin{table}
 \begin{center} 
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
@@ -86,7 +86,7 @@ Class                 & Syntax                     & Section                    
 
 % -----------------------------------------------------------------------------
 
-\begin{table}[p]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
@@ -116,7 +116,7 @@ Class                 & Syntax                     & Section                    
 
 % -----------------------------------------------------------------------------
 
-\begin{table}[p]
+\begin{table}
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
