--- a/docs/specification/notation.tex
+++ b/docs/specification/notation.tex
@@ -218,8 +218,10 @@
       denotes the $i$-th,
            $32$-bit 
       entry in said register file.
-
-% TODO: XCCR, XCSR
+\item $\SPR{XCCR}$
+      and
+      $\SPR{XCSR}$
+      denote two \XCID-specific CSRs.
 
 \end{itemize}
 
