--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -47,7 +47,8 @@ Bristol, BS8 1UB, United Kingdom.\\
 \label{sec:spec}
 
 \import{./specification/}{spec-state.tex}
-\import{./specification/}{spec-instr.tex}
+\import{./specification/}{spec-exception.tex}
+\import{./specification/}{spec-instruction.tex}
 
 % =============================================================================
 
